# biommap

./: .copier-answers.yml  Cargo.toml  LICENSE  Readme.md  crates.js  search-index.js  settings.html  source-files.js
.github/workflows/: msrv.yml  test.yml
biommap/: all.html  constant.DEFAULT_BLOCKSIZE.html  index.html  macro.impl_producer.html  macro.impl_reader.html  macro.impl_sequential.html  sidebar-items.js
biommap/block/: index.html  sidebar-items.js  struct.Block.html
biommap/error/: enum.Error.html  enum.VcfError.html  index.html  sidebar-items.js  type.Result.html
biommap/fasta/: index.html  sidebar-items.js  struct.Producer.html  struct.Reader.html  struct.Record.html
biommap/fastq/: index.html  sidebar-items.js  struct.Producer.html  struct.Reader.html  struct.Record.html
biommap/parser/: index.html  sidebar-items.js
biommap/parser/sequential/: index.html
biommap_derive/: Cargo.toml
biommap_derive/src/: block.rs  lib.rs  parser.rs
biommap_derive/src/block/: block2record.rs  file2block.rs
biommap_derive/src/parser/: map_reduce.rs  sequential.rs  shared_state.rs
examples/: biommap.rs  count_records.rs  count_records_needletail.rs
implementors/core/convert/: trait.From.js
implementors/core/error/: trait.Error.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/iter/traits/iterator/: trait.Iterator.js
implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
implementors/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
src/: block.rs  error.rs  fasta.rs  fastq.rs  lib.rs  parser.rs  tests.rs  vcf.rs
src/biommap/: block.rs.html  error.rs.html  fasta.rs.html  fastq.rs.html  lib.rs.html  parser.rs.html
src/biommap/parser/: sequential.rs.html
src/block/: derive.rs
src/parser/: map_reduce.rs  sequential.rs  shared_state.rs
src/tests/: constant.rs  generator.rs  io.rs
