[package]
name = "biommap"
version = "0.1.0"
authors = ["Pierre Marijon <pierre@marijon.fr>"]
edition = "2021"
description = "Ar efficient bioinformatics file parser based on memory mapping of file."
rust-version = "1.60"

homepage = "https://github.com/natir/biommap"
repository = "https://github.com/natir/biommap"
documentation = "https://natir.github.io/biommap/biommap"

readme = "Readme.md"
license-file = "LICENSE"


[features]
default      = []
fasta        = ["bstr", "memchr"]
fastq        = ["bstr", "memchr"]
vcf          = ["bstr", "memchr"]
shared_state = ["rayon"]
macro        = ["syn", "quote"]


[dependencies]
memmap2        = { version = "0.5" }

# String manipulation
bstr           = { version = "1", optional = true }
memchr         = { version = "2", optional = true }

# Proc macro
syn            = { version = "1", optional = true }
quote          = { version = "1", optional = true }

# Parallel management
rayon          = { version = "1", optional = true }

# Error management
thiserror      = { version = "1" }

# Logging and error management
log            = { version = "0.4" }

[dev-dependencies]
# Benchmarking
criterion      = { version = "0.3" }

# Test
rand           = { version = "0.8" }
tempfile       = { version = "3" }

# CLI management
clap           = { version = "3", features = ["derive"] }

# Logging management
stderrlog      = { version = "0.4" }


[profile.release]
lto = 'thin'
opt-level = 3
overflow-checks = false
panic = 'abort'
incremental = false


[profile.profiling]
inherits = "release"
debug = true