[package]
name = "biommap"
version = "0.1.0"
authors = ["Pierre Marijon <pierre@marijon.fr>"]
edition = "2021"
description = "An efficient bioinformatics file parser based on memory mapping of file."
rust-version = "1.60"

homepage = "https://github.com/natir/biommap"
repository = "https://github.com/natir/biommap"
documentation = "https://natir.github.io/biommap/biommap"

readme = "Readme.md"
license-file = "LICENSE"


[features]
default      = []
fasta        = ["dep:bstr", "dep:memchr"]
fastq        = ["dep:bstr", "dep:memchr"]
vcf          = ["dep:bstr", "dep:memchr"]
parallel     = ["dep:rayon"]
shared_state = ["parallel"]
derive       = ["dep:biommap_derive"]


[dependencies]
biommap_derive = { path = "biommap_derive", optional = true }

memmap2        = { version = "0.9" }

# String manipulation
bstr           = { version = "1", optional = true }
memchr         = { version = "2", optional = true }

# Parallel management
rayon          = { version = "1", optional = true }

# Error management
thiserror      = { version = "1" }

# Logging management
log            = { version = "0.4" }

[dev-dependencies]
# Benchmarking
criterion      = { version = "0.5" }

# Test
rand           = { version = "0.8" }
tempfile       = { version = "3" }
assert_matches = { version = "1" }

# CLI management
clap           = { version = "4", features = ["derive"] }

# Logging management
stderrlog      = { version = "0.5" }

# Error management
anyhow         = { version = "1" }


[[example]]
name = "count_records"
required-features = ["fasta", "derive"]


[profile.release]
lto = 'thin'
opt-level = 3
overflow-checks = false
panic = 'abort'
incremental = false


[profile.profiling]
inherits = "release"
debug = true